<resources>
    <string name="app_name">NewSimpleMemoApp</string>

    <string name="income">수입</string>
    <string name="expense">지출</string>
    <string name="date">날짜</string>
    <string name="asset">자산</string>
    <string name="attr">분류</string>
    <string name="price">가격</string>
    <string name="description">설명</string>
    <string name="remove">삭제</string>
    <string name="save">저장하기</string>
    <string name="year">년</string>
    <string name="month">월</string>
    <string name="total">합계</string>
    <string name="empty_data">데이터가 존재하지 않습니다</string>
    <string name="current_month">이번 달</string>

    <string name="jan">1월</string>
    <string name="fab">2월</string>
    <string name="mar">3월</string>
    <string name="apr">4월</string>
    <string name="may">5월</string>
    <string name="jun">6월</string>
    <string name="jul">7월</string>
    <string name="aug">8월</string>
    <string name="sep">9월</string>
    <string name="oct">10월</string>
    <string name="nov">11월</string>
    <string name="dec">12월</string>
</resources>