<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.hegunhee.newsimplememoapp.feature.dateDialog.DateDialogViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black">


        <View
            android:id="@+id/top_background"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/dark_blue"
            app:layout_constraintBottom_toBottomOf="@id/date_text"
            app:layout_constraintTop_toTopOf="@id/date_text" />

        <TextView
            android:id="@+id/date_text"
            style="@style/datePickerTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/date"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/current_month"
            style="@style/datePickerTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:text="@string/current_month"
            app:layout_constraintBottom_toBottomOf="@id/date_text"
            app:layout_constraintEnd_toStartOf="@id/exit_button"
            app:layout_constraintTop_toTopOf="@id/date_text" />

        <ImageButton
            android:id="@+id/exit_button"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/ic_exit"
            android:backgroundTint="@color/white"
            app:layout_constraintBottom_toBottomOf="@id/date_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/date_text" />

        <ImageButton
            android:id="@+id/previous_month_button"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@drawable/ic_left"
            android:backgroundTint="@color/white"
            app:layout_constraintStart_toStartOf="@id/date_text"
            app:layout_constraintTop_toBottomOf="@id/date_text" />

        <TextView
            style="@style/datePickerTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="@id/previous_month_button"
            app:layout_constraintEnd_toEndOf="@id/next_month_button"
            app:layout_constraintStart_toStartOf="@id/date_text"
            app:layout_constraintTop_toTopOf="@id/previous_month_button"
            android:text="@{viewModel.year}"
            tools:text="2023" />

        <ImageButton
            android:id="@+id/next_month_button"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@drawable/ic_right"
            android:backgroundTint="@color/white"
            app:layout_constraintBottom_toBottomOf="@id/previous_month_button"
            app:layout_constraintEnd_toEndOf="@id/exit_button"
            app:layout_constraintTop_toTopOf="@id/previous_month_button" />

        <TableLayout
            android:id="@+id/month_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="*"
            app:layout_constraintTop_toBottomOf="@id/previous_month_button">

            <TableRow>

                <TextView
                    style="@style/monthPickerStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingVertical="10dp"
                    android:text="@string/jan" />

                <TextView
                    style="@style/monthPickerStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingVertical="10dp"
                    android:text="@string/fab" />

                <TextView
                    style="@style/monthPickerStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingVertical="10dp"
                    android:text="@string/mar" />

                <TextView
                    style="@style/monthPickerStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingVertical="10dp"
                    android:text="@string/apr" />

            </TableRow>

            <TableRow>

                <TextView
                    style="@style/monthPickerStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingVertical="10dp"
                    android:text="@string/may" />

                <TextView
                    style="@style/monthPickerStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingVertical="10dp"
                    android:text="@string/jun" />

                <TextView
                    style="@style/monthPickerStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingVertical="10dp"
                    android:text="@string/jul" />

                <TextView
                    style="@style/monthPickerStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingVertical="10dp"
                    android:text="@string/aug" />

            </TableRow>

            <TableRow>

                <TextView
                    style="@style/monthPickerStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingVertical="10dp"
                    android:text="@string/sep" />

                <TextView
                    style="@style/monthPickerStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingVertical="10dp"
                    android:text="@string/oct" />

                <TextView
                    style="@style/monthPickerStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingVertical="10dp"
                    android:text="@string/nov" />

                <TextView
                    style="@style/monthPickerStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingVertical="10dp"
                    android:text="@string/dec" />

            </TableRow>

        </TableLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>