<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View"/>
        <variable
            name="viewModel"
            type="com.hegunhee.newsimplememoapp.feature.memo.MemoViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/date_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <Button
                android:id="@+id/left_button"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@drawable/ic_left"
                android:backgroundTint="@color/black"
                android:onClick="@{() -> viewModel.onPreviousMonthClick()}" />

            <TextView
                android:id="@+id/year_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@{viewModel.yearDate.toString()}"
                android:textSize="20sp"
                tools:text="2022" />

            <TextView
                android:id="@+id/year"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/year"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/month_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="10dp"
                android:text="@{viewModel.monthDate.toString()}"
                android:textSize="20sp"
                tools:text="3" />

            <TextView
                android:id="@+id/month"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/month"
                android:textSize="20sp"
                app:layout_constraintBaseline_toBaselineOf="@id/month_text" />

            <Button
                android:id="@+id/right_button"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@drawable/ic_right"
                android:backgroundTint="@color/black"
                android:onClick="@{() -> viewModel.onNextMonthClick()}" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <TextView
            android:id="@+id/income"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            android:text="@string/income"
            android:textSize="15sp"
            app:layout_constraintEnd_toStartOf="@id/expenses"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/date_layout" />

        <TextView
            android:id="@+id/expenses"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:text="@string/expense"
            android:textSize="15sp"
            app:layout_constraintEnd_toStartOf="@id/total"
            app:layout_constraintStart_toEndOf="@id/income"
            app:layout_constraintTop_toTopOf="@id/income" />

        <TextView
            android:id="@+id/total"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:text="@string/total"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/expenses"
            app:layout_constraintTop_toTopOf="@id/income" />

        <TextView
            android:id="@+id/income_text"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@{viewModel.incomeValue.toString()}"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="@id/income"
            app:layout_constraintStart_toStartOf="@id/income"
            app:layout_constraintTop_toBottomOf="@id/income"
            app:layout_constraintWidth_max="100dp"
            tools:text="2000" />

        <TextView
            android:id="@+id/expenses_text"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@{viewModel.expenseValue.toString()}"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="@id/expenses"
            app:layout_constraintStart_toStartOf="@id/expenses"
            app:layout_constraintTop_toTopOf="@id/income_text"
            app:layout_constraintWidth_max="100dp"
            tools:text="1000" />

        <TextView
            android:id="@+id/total_text"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@{viewModel.totalValue.toString()}"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="@id/total"
            app:layout_constraintStart_toStartOf="@id/total"
            app:layout_constraintTop_toBottomOf="@id/date_layout"
            app:layout_constraintTop_toTopOf="@id/income_text"
            app:layout_constraintWidth_max="100dp"
            tools:text="1000" />

        <TextView
            android:id="@+id/empty_recyclerview"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center"
            android:text="@string/empty_data"
            android:textSize="20sp"
            android:visibility="@{viewModel.memoList.isEmpty() ? View.VISIBLE : View.GONE}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/expenses_text"
            app:layout_constraintVertical_bias="0.0"
            tools:visibility="visible" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerview"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:visibility="@{viewModel.memoList.isEmpty() ? View.GONE : View.VISIBLE}"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/expenses_text" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floatingButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/ic_add"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:onClick="@{() -> viewModel.addMemo()}" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>

